# learn-ray-tracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  learn-raytracing.code-workspace
cpp/: CMakeLists.txt  README.md
cpp/src/: Color.h  Hittable_List.cpp  Interval.cpp  Interval.h  Ray.cpp  main.cpp
rust/: .gitignore  Cargo.toml  Makefile  README.md  dev-notes.md  images.md  test.ppm
rust-glsl/: .gitignore  README.md  index.html  package-lock.json
rust-glsl/shaders/: README.md  ex2.glsl  ex3.glsl  ray-mesh-test.glsl
rust-glsl/src/: lib.rs
rust-gpu/: dev.md  rust-gpu.cap
rust-gpu/shaders/: bindings.wgsl  constants.wgsl  fs.wgsl  helper.wgsl  materials.wgsl  objects.wgsl  shaders.wgsl  vs.wgsl
rust-gpu/src/: common.rs  gpu_buffer.rs  lib.rs  main.rs  materials.rs  render.rs  scene.rs  shaders-example.wgsl  shaders.wgsl
rust/src/: camera.rs  cli.rs  helper.rs  hittable.rs  lib.rs  main.rs  materials.rs  objects.rs  ray.rs  textures.rs  vec3.rs
rust/src/hittable/: bvh.rs
rust/src/hittable/bvh/: aabb.rs
rust/src/objects/: aabb.rs  disk.rs  planar.rs  quad.rs  rotation.rs  simple_constructors.rs  sphere.rs  translation.rs  triangle.rs
rust/src/objects/planar/: disk.rs  quad.rs  triangle.rs
rust/src/objects/transformations/: rotation.rs
rust/src/textures/: color.rs  image.rs
src/: Camera.cpp  Camera.h  Color.cpp  Color.h  Constants.h  Hittable.cpp  Hittable.h  Hittable_List.cpp  Hittable_List.h  Interval.h  Material.cpp  Material.h  Objects.cpp  Objects.h  RTWeekend.cpp  RTWeekend.h  Ray.cpp  Ray.h  Vec3.cpp  Vec3.h  main.cpp
