[package]
name = "rust-simple-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive", "string"]}
image = {version = "0.24.7", features = ["png", "pnm"]}
indicatif = "0.17.7"
rand = "0.8.5"
rayon = "1.8.0"
